<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Evaluacion.evaluacionVentana">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:orientation="vertical">


            <com.github.florent37.shapeofview.shapes.ArcView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:elevation="4dp"
                app:shape_arc_cropDirection="outside"
                app:shape_arc_height="20dp"
                app:shape_arc_position="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grupo"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_height="100dp"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/grupo" />


            </com.github.florent37.shapeofview.shapes.ArcView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/icons8_nombre_100" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombreG"
                        android:inputType="text"
                        android:enabled="false"
                        android:id="@+id/textInputNameCom">


                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/satisfaccion" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textCorreoCom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/califica3"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="-2dp"
                    android:src="@drawable/satisfaccion" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:text="@string/VisualizaGrupo"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerGrupoCom"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="26sp" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/btnIndicadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revisarIndicadores">

            </Button>




        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/grupo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/filtra"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <ListView
                    android:id="@+id/lv_datosPersonasRcom"
                    android:layout_width="match_parent"
                    android:nestedScrollingEnabled="true"
                    android:layout_height="wrap_content">

                </ListView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/key_de_recurso_cargado"
                android:inputType="text"
                android:id="@+id/solucionkeyR"
                android:visibility="gone" />


        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageNextCom"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_update"
            android:layout_gravity="right|top"
            app:civ_circle_background_color="@color/colorGreenAccent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</ScrollView>
